fix: related products - spacing

--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -476,7 +476,7 @@
         text-decoration: none;
       }
 
-      .PostDescription {
+      .PostInfoDescription {
         cursor: pointer;
       }
     }
